# django-rest-starter

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/_django/: _django.py
src/_django/base_template/: gitignore.example
src/_heroku/: _heroku.py
src/_heroku/base_template/: Procfile  Procfile.example
src/_template/: template.py
src/_user/: _user.py
src/_user/base_template/: models.py  serializers.py
src/_user/user_files/: manager.py
src/django_rest_starter/: __main__.py  _settings.py  _venv.py  requirements.json  settings.json
