[metadata]
description-file = README.md

[options]
package_dir =
    =src

packages= find:

include_package_data = true

zip_safe = false

[options.package_data]
* = *json, *.example

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    django-rest-starter = django_rest_starter.__main__:main